--- a/publications.html
+++ b/publications.html
@@ -16,16 +16,20 @@ layout: default
     </div>
     <section id="Articles" class="wrapper style4 container">
       <h2>Articles:</h2>
-          {% for post in site.categories.article %}
-                <p class="publication">
-                  {{ post.excerpt | remove: '<p>' | remove: '</p>'}}
-                  {% if post.pdf %}
-                    <a href="{{post.pdf}}"><span class="icon fa-file-pdf-o"></span></a>
-                  {% endif %}
-                  {% if post.link %}
-                    <a href="{{post.link}}" target=”_blank”><span class="icon fa-globe"></span></a>
-                  {% endif %}
-                </p>
+          {% assign postsByYear = site.categories.article | group_by_exp:"article", "article.date | date: '%Y'"  %}
+          {% for year in postsByYear %}
+              <h3>{{year.name}}</h3>
+              {% for post in year.items %}
+                    <p class="publication">
+                      {{ post.excerpt | remove: '<p>' | remove: '</p>'}}
+                      {% if post.pdf %}
+                        <a href="{{post.pdf}}"><span class="icon fa-file-pdf-o"></span></a>
+                      {% endif %}
+                      {% if post.link %}
+                        <a href="{{post.link}}" target=”_blank”><span class="icon fa-globe"></span></a>
+                      {% endif %}
+                    </p>
+              {% endfor %}
           {% endfor %}
           <a href="#main" id="back-to-top" class="scrolly"><h3>Back to top</h3></a>
     </section>
