--- a/news.html
+++ b/news.html
@@ -9,24 +9,24 @@ layout: default
         <h2>C-LAB <strong>NEWS</strong></h2>
     </header>
     <section class="wrapper style4 container">
-      {% assign postsByYearMonth = site.categories.news | group_by_exp:"news", "news.date | date: '%Y %b'"  %}
+      {% assign postsByYearMonth = site.categories.news | group_by_exp:"news", "news.date | date: '%Y'"  %}
       {% for yearMonth in postsByYearMonth %}
         <h3>{{ yearMonth.name }}</h3>
         <div class="row news">
           {% for news in yearMonth.items %}
-          <div class="4u">
+          <div class="6u">
             <a href="{{news.url}}" class="image featured">
               <div class="gallery-image">
                 <img src="{{news.image}}" alt="" />
                 <div class="gallery-text">
-                  <h3>{{news.title}}</h3>          
-                </div>    
-              </div>  
+                  <h3>{{news.title}}</h3>
+                </div>
+              </div>
             </a>
           </div>
           {% endfor %}
         </div>
       {% endfor %}
     </section>
-    
+
 </article>
