--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ layout: default
 			<article id="main">
 
 				<header class="special container">
-					<span class="icon fa-envelope"></span>
+					<span class="icon fa fa-envelope"></span>
 					<h2>Get In Touch</h2>
 				</header>
 
@@ -22,13 +22,13 @@ layout: default
 								</div>
 								<div class="row">
 									<div class="4u">
-										<span class="icon circle fa-at"></span>
+										<span class="icon circle fa fa-at"></span>
 									</div>
 									<div class="4u">
-										<span class="icon circle fa-twitter"></span>
+										<span class="icon circle fa fa-twitter"></span>
 									</div>
 									<div class="4u">
-										<span class="icon circle fa-facebook"></span>
+										<span class="icon circle fa fa-facebook"></span>
 									</div>
 								</div>
 								<div class="row">
