--- a/network.html
+++ b/network.html
@@ -4,7 +4,7 @@ layout: default
 
 <article id="main">
     <header class="special container">
-        <span class="icon fa-handshake-o"></span>
+        <span class="icon fa fa-handshake-o"></span>
         <h2><strong>Consortium</strong></h2>
     </header>
     <section class="wrapper style4 container">
