--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,7 @@ layout: default
 
 <article id="main">
     <header class="special container">
-        <span class="icon fa-book"></span>
+        <span class="icon fa fa-book"></span>
         <h2><strong>Publications</strong></h2>
     </header>
     <div class="publication-navi style4 container">
@@ -23,10 +23,10 @@ layout: default
                     <p class="publication">
                       {{ post.excerpt | remove: '<p>' | remove: '</p>'}}
                       {% if post.pdf %}
-                        <a href="{{post.pdf}}"><span class="icon fa-file-pdf-o"></span></a>
+                        <a href="{{post.pdf}}"><span class="icon fa fa-file-pdf-o"></span></a>
                       {% endif %}
                       {% if post.link %}
-                        <a href="{{post.link}}" target=”_blank”><span class="icon fa-globe"></span></a>
+                        <a href="{{post.link}}" target=”_blank”><span class="icon fa fa-globe"></span></a>
                       {% endif %}
                     </p>
               {% endfor %}
@@ -42,10 +42,10 @@ layout: default
                   <p class="publication">
                     {{ post.excerpt | remove: '<p>' | remove: '</p>'}}
                     {% if post.pdf %}
-                      <a href="{{post.pdf}}"><span class="icon fa-file-pdf-o"></span></a>
+                      <a href="{{post.pdf}}"><span class="icon fa fa-file-pdf-o"></span></a>
                     {% endif %}
                     {% if post.link %}
-                      <a href="{{post.link}}" target=”_blank”><span class="icon fa-globe"></span></a>
+                      <a href="{{post.link}}" target=”_blank”><span class="icon fa fa-globe"></span></a>
                     {% endif %}
                   </p>
             {% endfor %}
@@ -61,10 +61,10 @@ layout: default
                   <p class="publication">
                     {{ post.excerpt | remove: '<p>' | remove: '</p>'}}
                     {% if post.pdf %}
-                      <a href="{{post.pdf}}"><span class="icon fa-file-pdf-o"></span></a>
+                      <a href="{{post.pdf}}"><span class="icon fa fa-file-pdf-o"></span></a>
                     {% endif %}
                     {% if post.link %}
-                      <a href="{{post.link}}" target=”_blank”><span class="icon fa-globe"></span></a>
+                      <a href="{{post.link}}" target=”_blank”><span class="icon fa fa-globe"></span></a>
                     {% endif %}
                   </p>
             {% endfor %}
