--- a/consortium.html
+++ b/consortium.html
@@ -77,7 +77,7 @@ layout: default
 
       <div class="row posts people" style="flex-flow: column; align-items: center; margin-bottom: 3em;">
         <h2 style="text-align: center; font-weight: bold;">DIRECTOR</h2>
-        {% for post in site.categories.chair %}
+        {% for post in site.categories.director %}
         <div class="4u">
           <a href="#{{post.title}}">
             <span class="image people"><img src="{{post.image-file}}" alt=""></span>
