--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,13 @@ layout: default
 								</div>
 								<div class="row">
 									<div class="4u">
-										<a href="mailto:krissand@rm.dk ">krissand@rm.dk</a>
+										<a href="mailto:krissand@rm.dk ">Email the director</a>
 									</div>
 									<div class="4u">
-										<a href="">maybe twitter?</a>
+										<a href="">under construction</a>
 									</div>
 									<div class="4u">
-										<a href="">some other site?</a>
+										<a href="">under construction</a>
 									</div>
 								</div>
 							</div>
