--- a/consortium.html
+++ b/consortium.html
@@ -8,7 +8,6 @@ layout: default
         if (adr=="#members"){
           lista = document.getElementsByClassName("close");
           var i = lista.length;
-
           while(i--){
             lista[i].href = adr;
           }
@@ -77,7 +76,7 @@ layout: default
 
       <div class="row posts people" style="flex-flow: column; align-items: center; margin-bottom: 3em;">
         <h2 style="text-align: center; font-weight: bold;">DIRECTOR</h2>
-        {% for post in site.categories.director %}
+        {% for post in site.categories.chair %}
         <div class="4u">
           <a href="#{{post.title}}">
             <span class="image people"><img src="{{post.image-file}}" alt=""></span>
@@ -89,7 +88,7 @@ layout: default
       </div>
 
       <div class="row posts people">
-        <h2 style="text-align: center; font-weight: bold; width: 100%">PRINCIPAL AND INDEPENDENT</h2>
+        <h2 style="text-align: center; font-weight: bold; width: 100%">PRINCIPAL/INDEPENDENT INVESTIGATORS</h2>
         {% assign sortedPosts = site.categories.member | sort: 'surname' %}
         {% for post in sortedPosts %}
         <div class="4u">
